# screeps-api

./: CMakeLists.txt  README.md  conanfile.py  emscripten.profile
data/: todo.txt
include/screeps/: constants.hpp  construction-site.hpp  container.hpp  controller.hpp  cpu.hpp  creep.hpp  energy-source.hpp  enums.hpp  extension.hpp  extractor.hpp  flag.hpp  game.hpp  inter-shard-memory.hpp  lab.hpp  link.hpp  map.hpp  market.hpp  memory.hpp  mineral.hpp  nuker.hpp  observer.hpp  order.hpp  path-finder.hpp  portal.hpp  power-bank.hpp  power-creep.hpp  power-spawn.hpp  rampart.hpp  raw-memory.hpp  road.hpp  room-object.hpp  room-position.hpp  room.hpp  screeps.hpp  source.hpp  spawn.hpp  storage.hpp  structure.hpp  terminal.hpp  test.hpp  (+7 more)
src/: game.cpp  raw-mamory.cpp
test_package/: conanfile.py
